Updated name of the SBG paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,11 +22,11 @@
   preview={jncg.png}
 }
 
-@article{MBG,
-  abbr={MBG},
-  title={The Effects of Mastery Based Grading in Introductory Mathematics Courses (In Preparation)},
-  author={Clifton, A. and Corbett Cruse, K. and and Farman, B. and Long, W.},
-  year={2023},
+@article{FGM,
+  abbr={FGM},
+  title={Fostering Growth Mindsets: Implementing Standards-Based Grading in College Algebra (In Preparation)},
+  author={Clifton, A. and Corbett Cruse, K. and Farman, B. and Long, W.},
+  year={2024},
   selected={true}
 }
 
