Added SBG paper.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,9 +24,10 @@
 
 @article{FGM,
   abbr={FGM},
-  title={Fostering Growth Mindsets: Implementing Standards-Based Grading in College Algebra (In Preparation)},
-  author={Clifton, A. and Corbett Cruse, K. and Farman, B. and Long, W.},
-  year={2024},
-  selected={true}
+  title={Fostering Growth Mindsets: Implementing Standards-Based Grading in College Algebra (To Appear)},
+  author={Farman, B. and Clifton, A. and Long, W. and Corbett Cruse, K.},
+  year=2025,
+  selected={true},
+  journal={ASEE Annual Conference &amp; Exposition}
 }
 
