--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,12 +22,42 @@
   preview={jncg.png}
 }
 
-@article{FGM,
-  abbr={FGM},
-  title={Fostering Growth Mindsets: Implementing Standards-Based Grading in College Algebra (To Appear)},
-  author={Farman, B. and Clifton, A. and Long, W. and Corbett Cruse, K.},
-  year=2025,
+@inproceedings{FGM,
+  abbr={ASEE},
+  title={Fostering Growth Mindsets: Implementing Standards-Based Grading in College Algebra},
+  author = {Blake A. Farman, Ann Clifton, William C. Long, and Krystal Corbett Cruse},
+  abstract={In mathematics courses, grading practices often focus on performance through a cumulative point system, which can mask students’ true understanding of the material. For students at EPSCoR institutions, many of whom are first-generation college students from rural communities, this traditional grading approach does not always foster the depth of learning or resilience required for long-term success. With the goal of encouraging a growth mindset, faculty members at these institutions sought a grading system that would better reflect students’ comprehension and support their academic growth. Standards-based grading (SBG) was implemented to meet these needs by shifting the focus away from partial credit accumulation and toward a more meaningful assessment of learning.
+
+SBG was adopted in College Algebra courses to encourage students to master specific learning objectives through an iterative process of reassessment. Unlike traditional weighted average grading (WAG), SBG emphasizes mastery of content, giving students multiple opportunities to demonstrate their understanding. This paper will present a statistical analysis between student outcomes in SBG and WAG college algebra courses.
+
+Supported by recent literature, SBG has been shown to foster student engagement, reduce math anxiety, and cultivate a growth mindset. This paper additionally explores the logistical aspects of implementing SBG, the process of gaining administrative and student buy-in, and provides resources for instructors interested in adopting SBG in STEM fields to improve student outcomes.},
+  year={2025},
+  month={June},
+  address={Montreal, Quebec, Canada},
+  publisher={ASEE Conferences},
+  url={https://doi.org/10.18260/1-2--56592},
+  pdf={https://peer.asee.org/56592},
   selected={true},
-  journal={ASEE Annual Conference &amp; Exposition}
+  journal={ASEE Annual Conference &amp; Exposition},
+  doi={10.18260/1-2--56592}
 }
 
+@inproceedings{asee_peer_57495,
+  abbr={ASEE},
+  title={Work in Progress: First-Year Engineering Students' Confidence in Communicating Mathematical Content},
+  author = {Ann W. Clifton, Mary Fendley, Blake Farman, and Joshua Coriell},
+  abstract={This Work in Progress study explores the impact of weekly journaling assignments on engineering students’ ability to communicate mathematical concepts effectively in design projects. At _ University, first-year engineering students participate in the "Living with the Lab" course sequence, culminating in the First-Year Projects Showcase. While students excel at explaining their product’s purpose and hardware, they often struggle to articulate the underlying STEM principles, especially in mathematics.
+
+To address this gap, a targeted journaling assignment was integrated into the calculus sequence to enhance reflection on mathematical concepts and their connection to engineering applications. Using surveys, written reflections, and project presentations, this mixed-methods study evaluates the effectiveness of journaling in improving communication skills and confidence. Initial findings from the fall quarter suggest promising improvements in students' mathematical communication skills, with ongoing data collection in winter and spring quarters.
+
+Aligned with Kern Entrepreneurial Engineering Network (KEEN) principles of Curiosity, Connections, and Collaboration, this intervention encourages students to integrate math into their hands-on work and articulate these connections. Findings aim to offer strategies to develop mathematical communication skills, supporting deeper learning and better preparation for future challenges in engineering.},
+  year={2025},
+  month={June},
+  address={Montreal, Quebec, Canada},
+  publisher={ASEE Conferences},
+  url={https://doi.org/10.18260/1-2--57495},
+  pdf={https://peer.asee.org/57495},
+  selected={true},
+  journal={ASEE Annual Conference &amp; Exposition},
+  doi={10.18260/1-2--57495}
+}
