Added a link to the notes for 4083 to the course page.

--- a/_sections/4083-F25.md
+++ b/_sections/4083-F25.md
@@ -4,3 +4,6 @@ crn: 'Math 4083/5083 F25'
 year: 2025
 semester: Fall
 ---
+## Course Materials
+
+- [Notes](https://www.blakefarman.phd/4083-F25/notes/frontmatter.html)
