--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,7 +25,7 @@
 @inproceedings{FGM,
   abbr={ASEE},
   title={Fostering Growth Mindsets: Implementing Standards-Based Grading in College Algebra},
-  author = {Blake A. Farman, Ann Clifton, William C. Long, and Krystal Corbett Cruse},
+  author = {Blake A. Farman and Ann W. Clifton and William C. Long, and Krystal Corbett Cruse},
   abstract={In mathematics courses, grading practices often focus on performance through a cumulative point system, which can mask students’ true understanding of the material. For students at EPSCoR institutions, many of whom are first-generation college students from rural communities, this traditional grading approach does not always foster the depth of learning or resilience required for long-term success. With the goal of encouraging a growth mindset, faculty members at these institutions sought a grading system that would better reflect students’ comprehension and support their academic growth. Standards-based grading (SBG) was implemented to meet these needs by shifting the focus away from partial credit accumulation and toward a more meaningful assessment of learning.
 
 SBG was adopted in College Algebra courses to encourage students to master specific learning objectives through an iterative process of reassessment. Unlike traditional weighted average grading (WAG), SBG emphasizes mastery of content, giving students multiple opportunities to demonstrate their understanding. This paper will present a statistical analysis between student outcomes in SBG and WAG college algebra courses.
@@ -45,7 +45,7 @@ Supported by recent literature, SBG has been shown to foster student engagement,
 @inproceedings{asee_peer_57495,
   abbr={ASEE},
   title={Work in Progress: First-Year Engineering Students' Confidence in Communicating Mathematical Content},
-  author = {Ann W. Clifton, Mary Fendley, Blake Farman, and Joshua Coriell},
+  author = {Ann W. Clifton and Mary Fendley and Blake Farman, and Joshua Coriell},
   abstract={This Work in Progress study explores the impact of weekly journaling assignments on engineering students’ ability to communicate mathematical concepts effectively in design projects. At _ University, first-year engineering students participate in the "Living with the Lab" course sequence, culminating in the First-Year Projects Showcase. While students excel at explaining their product’s purpose and hardware, they often struggle to articulate the underlying STEM principles, especially in mathematics.
 
 To address this gap, a targeted journaling assignment was integrated into the calculus sequence to enhance reflection on mathematical concepts and their connection to engineering applications. Using surveys, written reflections, and project presentations, this mixed-methods study evaluates the effectiveness of journaling in improving communication skills and confidence. Initial findings from the fall quarter suggest promising improvements in students' mathematical communication skills, with ongoing data collection in winter and spring quarters.
