Standardized my name across the bibliography.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
 @article{KNCP,
   abbr={JNCG},
   title={Kernels for noncommutative projective schemes},
-  author={Ballard, M. and Farman, B.},
+  author={Matthew Ballard and Blake Farman},
   abstract={We give a noncommutative geometric description of the internal Hom dg-category in the homotopy category of dg-categories between two noncommutative projective schemes in the style of Artin-Zhang. As an immediate application, we give a noncommutative projective derived Morita statement along the lines of Rickard and Orlov.},
   journal={J. Noncommut. Geom.},
   volume={15},
@@ -25,7 +25,7 @@
 @inproceedings{FGM,
   abbr={ASEE},
   title={Fostering Growth Mindsets: Implementing Standards-Based Grading in College Algebra},
-  author = {Blake A. Farman and Ann W. Clifton and William C. Long, and Krystal Corbett Cruse},
+  author = {Blake Farman and Ann W. Clifton and William C. Long, and Krystal Corbett Cruse},
   abstract={In mathematics courses, grading practices often focus on performance through a cumulative point system, which can mask students’ true understanding of the material. For students at EPSCoR institutions, many of whom are first-generation college students from rural communities, this traditional grading approach does not always foster the depth of learning or resilience required for long-term success. With the goal of encouraging a growth mindset, faculty members at these institutions sought a grading system that would better reflect students’ comprehension and support their academic growth. Standards-based grading (SBG) was implemented to meet these needs by shifting the focus away from partial credit accumulation and toward a more meaningful assessment of learning.
 
 SBG was adopted in College Algebra courses to encourage students to master specific learning objectives through an iterative process of reassessment. Unlike traditional weighted average grading (WAG), SBG emphasizes mastery of content, giving students multiple opportunities to demonstrate their understanding. This paper will present a statistical analysis between student outcomes in SBG and WAG college algebra courses.
