Added recent PRs to publication list.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,50 @@
 
 @string{ems = {European Mathematical Society,}}
 
+@misc{mathlib-farmanb-78484be,
+  abbr         = {mathlib4},
+  author       = {Farman, Blake},
+  title        = {feat(RingTheory/IdealFilter): add ideal filters and Gabriel filters},
+  howpublished = {\url{https://github.com/leanprover-community/mathlib4/commit/78484be993d956d5933ce584b3289324f42d923d}},
+  github       = {https://github.com/leanprover-community/mathlib4/commit/78484be993d956d5933ce584b3289324f42d923d},
+  year         = {2026},
+  month        = {Jan},
+  day          = {22},
+  note         = {Introduces ideal filters on rings and Gabriel filters in <code>mathlib4</code>, including the uniformity conditions (T1--T3), Gabriel composition, and a characterization of Gabriel filters (T4). Preparatory infrastructure for relating Gabriel filters to Giraud subcategories; merged into <code>mathlib4</code> via PR <a href="https://github.com/leanprover-community/mathlib4/pull/33021">#33021</a>},
+  selected     = {true},
+  category     = {formalization},
+  preview      = {lean.png},  
+}
+
+@misc{mathlib4-farmanb-a91e88c,
+  abbr         = {mathlib4},
+  author       = {Farman, Blake},
+  title        = {feat(RingTheory/IdealFilter): topologies associated to ideal filters},
+  howpublished = {\url{https://github.com/leanprover-community/mathlib4/commit/a91e88cd47de34dbbc01d941fd517e2d7557473e}},
+  github       = {https://github.com/leanprover-community/mathlib4/commit/a91e88cd47de34dbbc01d941fd517e2d7557473e},  
+  year         = {2026},
+  month        = {Feb},
+  day          = {2},
+  note         = {Introduces additive and ring topologies on rings arising from ideal filters in <code>mathlib4</code>, including constructions of additive and ring filter bases, characterizations of uniform ideal filters via the existence of a ring filter basis, neighborhood descriptions of the induced topologies, and a proof that the resulting ring topology is linear; provides the topological counterpart to the algebraic theory of ideal filters; merged into <code>mathlib4</code> via PR <a href="https://github.com/leanprover-community/mathlib4/pull/33853">#33852</a>.},
+  selected     = {true},
+  category     = {formalization},
+  preview      = {lean.png},
+}
+
+@misc{mathlib4-farman-95093e9,
+  abbr         = {mathlib4},
+  author       = {Farman, Blake},
+  title        = {feat(RingTheory/Ideal): Generalize <code>Submodule.colon</code> to sets},
+  howpublished = {\url{https://github.com/leanprover-community/mathlib4/commit/95093e961c9b2e15366b2232d2b95f6688e9e082}},
+  github         = {https://github.com/leanprover-community/mathlib4/commit/95093e961c9b2e15366b2232d2b95f6688e9e082},  
+  year         = {2026},
+  month        = {Jan},
+  day          = {16},
+  note         = {Generalize <code>Submodule.colon</code> to accept <code>S : Set M</code> and update the surrounding API; merged into <code>mathlib4</code> via PR <a href="https://github.com/leanprover-community/mathlib4/pull/33390">#33390</a>.},
+  category     = {refactor},
+  preview      = {lean.png},
+}
+
 @article{KNCP,
   abbr={JNCG},
   title={Kernels for noncommutative projective schemes},
@@ -19,7 +63,8 @@
   url={https://doi.org/10.4171/jncg/427},
   pdf={https://ems.press/content/serial-article-files/30892},
   selected={true},
-  preview={jncg.png}
+  preview={jncg.png},
+  category={paper}
 }
 
 @inproceedings{FGM,
@@ -37,9 +82,9 @@ Supported by recent literature, SBG has been shown to foster student engagement,
   publisher={ASEE Conferences},
   url={https://doi.org/10.18260/1-2--56592},
   pdf={https://peer.asee.org/56592},
-  selected={true},
   journal={ASEE Annual Conference &amp; Exposition},
-  doi={10.18260/1-2--56592}
+  doi={10.18260/1-2--56592},
+  category={paper}
 }
 
 @inproceedings{asee_peer_57495,
@@ -57,7 +102,7 @@ Aligned with Kern Entrepreneurial Engineering Network (KEEN) principles of Curio
   publisher={ASEE Conferences},
   url={https://doi.org/10.18260/1-2--57495},
   pdf={https://peer.asee.org/57495},
-  selected={true},
   journal={ASEE Annual Conference &amp; Exposition},
-  doi={10.18260/1-2--57495}
+  doi={10.18260/1-2--57495},
+  category={paper}
 }
