Added ASEE logo to papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,7 +15,7 @@
   note         = {Introduces ideal filters on rings and Gabriel filters in <code>mathlib4</code>, including the uniformity conditions (T1--T3), Gabriel composition, and a characterization of Gabriel filters (T4). Preparatory infrastructure for relating Gabriel filters to Giraud subcategories; merged into <code>mathlib4</code> via PR <a href="https://github.com/leanprover-community/mathlib4/pull/33021">#33021</a>},
   selected     = {true},
   category     = {formalization},
-  preview      = {lean.png},  
+  preview      = {lean.png}
 }
 
 @misc{mathlib4-farmanb-a91e88c,
@@ -30,7 +30,7 @@
   note         = {Introduces additive and ring topologies on rings arising from ideal filters in <code>mathlib4</code>, including constructions of additive and ring filter bases, characterizations of uniform ideal filters via the existence of a ring filter basis, neighborhood descriptions of the induced topologies, and a proof that the resulting ring topology is linear; provides the topological counterpart to the algebraic theory of ideal filters; merged into <code>mathlib4</code> via PR <a href="https://github.com/leanprover-community/mathlib4/pull/33853">#33852</a>.},
   selected     = {true},
   category     = {formalization},
-  preview      = {lean.png},
+  preview      = {lean.png}
 }
 
 @misc{mathlib4-farman-95093e9,
@@ -44,7 +44,7 @@
   day          = {16},
   note         = {Generalize <code>Submodule.colon</code> to accept <code>S : Set M</code> and update the surrounding API; merged into <code>mathlib4</code> via PR <a href="https://github.com/leanprover-community/mathlib4/pull/33390">#33390</a>.},
   category     = {refactor},
-  preview      = {lean.png},
+  preview      = {lean.png}
 }
 
 @article{KNCP,
@@ -84,7 +84,8 @@ Supported by recent literature, SBG has been shown to foster student engagement,
   pdf={https://peer.asee.org/56592},
   journal={ASEE Annual Conference &amp; Exposition},
   doi={10.18260/1-2--56592},
-  category={paper}
+  category={paper},
+  preview={asee.png}
 }
 
 @inproceedings{asee_peer_57495,
@@ -104,5 +105,6 @@ Aligned with Kern Entrepreneurial Engineering Network (KEEN) principles of Curio
   pdf={https://peer.asee.org/57495},
   journal={ASEE Annual Conference &amp; Exposition},
   doi={10.18260/1-2--57495},
-  category={paper}
+  category={paper},
+  preview={asee.png}
 }
